图片回显问题

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       loadNavbar: true, //自定义导航栏
       coverpage: true, //开启封面
       search: 'auto', //开启全文检索,默认值
-	  //alias: {
-		//'/.*/_sidebar.md': '/_sidebar.md',
-	  //,
+	  alias: {
+		'/.*/_sidebar.md': '/_sidebar.md',
+	  },
 	  subMaxLevel: 6, //开启目录，并设置最大层级
 	  sidebarDisplayLevel: 2, // set sidebar display level
     }
